# ATEAMSplusplus

./: .gitignore  .gitmodules  ATEAMS++.pc.in  ATEAMS++.pc.mimalloc.in  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  formulae.txt
docs/: _a_t_e_a_m_s_09_09_8h_source.html  _bernoulli_8h_source.html  _bernoulli_8tpp_source.html  _chain_8h_source.html  _complex_8h_source.html  _cubical_8h_source.html  _cubical_8tpp_source.html  _glauber_8h_source.html  _glauber_8tpp_source.html  _invaded_cluster_8h_source.html  _invaded_cluster_8tpp_source.html  _invasion_8h_source.html  _invasion_8tpp_source.html  _invasion_percolation_8h_source.html  _model_8h_source.html  _model_parameters_8h_source.html  _model_state_8h_source.html  _swendsen_wang_8h_source.html  _swendsen_wang_8tpp_source.html  annotated.html  annotated_dup.js  arithmetic_8h_source.html  class_a_t_e_a_m_s_1_1_data_writer-members.html  class_a_t_e_a_m_s_1_1_data_writer.html  class_a_t_e_a_m_s_1_1_data_writer.js  class_a_t_e_a_m_s_1_1_data_writer_aeb6c9882f28fe809c4782152cbb4d284_cgraph.map  class_a_t_e_a_m_s_1_1_data_writer_aeb6c9882f28fe809c4782152cbb4d284_cgraph.md5  class_a_t_e_a_m_s_1_1_data_writer_af6d4e7f6c66c544ecfe2ac3f252a5024_icgraph.map  class_a_t_e_a_m_s_1_1_data_writer_af6d4e7f6c66c544ecfe2ac3f252a5024_icgraph.md5  class_a_t_e_a_m_s_1_1arithmetic_1_1_thread_options-members.html  class_a_t_e_a_m_s_1_1arithmetic_1_1_thread_options.html  class_a_t_e_a_m_s_1_1arithmetic_1_1_thread_options.js  class_a_t_e_a_m_s_1_1complexes_1_1_complex-members.html  class_a_t_e_a_m_s_1_1complexes_1_1_complex.html  class_a_t_e_a_m_s_1_1complexes_1_1_complex.js  class_a_t_e_a_m_s_1_1complexes_1_1_complex__inherit__graph.map  class_a_t_e_a_m_s_1_1complexes_1_1_complex__inherit__graph.md5  class_a_t_e_a_m_s_1_1complexes_1_1_complex_a01aa572c027c6e8c3c88b3cc903b2542_icgraph.map  class_a_t_e_a_m_s_1_1complexes_1_1_complex_a01aa572c027c6e8c3c88b3cc903b2542_icgraph.md5  class_a_t_e_a_m_s_1_1complexes_1_1_complex_a271a21d67a50656bbe743686c2ea9556_icgraph.map  (+322 more)
docs/html/: _a_t_e_a_m_s_09_09_8h_source.html  _chain_8h_source.html  _cubical_8h_source.html  _model_8h_source.html  _swendsen_wang_8h_source.html  annotated.html  annotated_dup.js  arithmetic_8h_source.html  class_a_t_e_a_m_s_1_1_chain-members.html  class_a_t_e_a_m_s_1_1_chain.html  class_a_t_e_a_m_s_1_1_complex-members.html  class_a_t_e_a_m_s_1_1_complex.html  class_a_t_e_a_m_s_1_1_cubical-members.html  class_a_t_e_a_m_s_1_1_cubical.html  class_a_t_e_a_m_s_1_1_cubical.js  class_a_t_e_a_m_s_1_1_model-members.html  class_a_t_e_a_m_s_1_1_model.html  class_a_t_e_a_m_s_1_1_model.js  class_a_t_e_a_m_s_1_1_swendsen_wang-members.html  class_a_t_e_a_m_s_1_1_swendsen_wang.html  class_a_t_e_a_m_s_1_1_swendsen_wang.js  class_a_t_e_a_m_s_1_1_thread_options-members.html  class_a_t_e_a_m_s_1_1_thread_options.html  class_a_t_e_a_m_s_1_1arithmetic_1_1_thread_options-members.html  class_a_t_e_a_m_s_1_1arithmetic_1_1_thread_options.html  class_a_t_e_a_m_s_1_1arithmetic_1_1_thread_options.js  class_a_t_e_a_m_s_1_1complexes_1_1_complex-members.html  class_a_t_e_a_m_s_1_1complexes_1_1_complex.html  class_a_t_e_a_m_s_1_1complexes_1_1_complex.js  class_a_t_e_a_m_s_1_1complexes_1_1_cubical-members.html  class_a_t_e_a_m_s_1_1complexes_1_1_cubical.html  class_a_t_e_a_m_s_1_1complexes_1_1_cubical.js  class_a_t_e_a_m_s_1_1models_1_1_model-members.html  class_a_t_e_a_m_s_1_1models_1_1_model.html  class_a_t_e_a_m_s_1_1models_1_1_swendsen_wang-members.html  class_a_t_e_a_m_s_1_1models_1_1_swendsen_wang.html  class_a_t_e_a_m_s_1_1models_1_1_swendsen_wang.js  class_a_t_e_a_m_s_1_1statistics_1_1_chain-members.html  class_a_t_e_a_m_s_1_1statistics_1_1_chain.html  classes.html  (+63 more)
docs/html/search/: all_b.js  classes_0.js  classes_3.js  functions_3.js  functions_4.js  searchdata.js  typedefs_0.js  typedefs_1.js  (+3 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_a.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+41 more)
include/ATEAMS++/: ATEAMS++.h  common.h  enable_mimalloc.h  util.h
performance/: config.py  gauntlet.topology.sh  profiling.Bernoulli.cpp  profiling.Glauber.cpp  profiling.InvadedCluster.cpp  profiling.Invasion.cpp  profiling.addition.cpp  profiling.addition.sh  profiling.models.sh  profiling.persistence.cpp  profiling.topology.sh  timing.addition.cpp  timing.addition.py  timing.addition.sh  timing.persistence.cpp  timing.persistence.py  timing.persistence.sh  timing.topology.py  timing.topology.sh
profiles/: Bernoulli.cpp  Glauber.cpp  InvadedCluster.cpp  Invasion.cpp  InvasionPercolation.cpp  SwendsenWang.cpp  persistence.cpp  profiles.models.sh  profiles.sh  timing.persistence.sh
src/arithmetic/: kernel.cpp  kernel.tpp  persistence.cpp  persistence.tpp
src/complexes/: Cubical.cpp  Cubical.tpp
src/models/: Bernoulli.cpp  Glauber.cpp  InvadedCluster.cpp  InvasionPercolation.cpp  SwendsenWang.cpp  SwendsenWang.tpp
tests/: main.cpp  tests.h
tests/arithmetic/: addition.Zp.cpp  kernel.Q.cpp  kernel.Zp.cpp  kernel.cpp  persistence.Q.cpp  persistence.Zp.cpp  persistence.cpp
tests/complexes/: Cubical.Q.cpp  Cubical.Zp.cpp  Cubical.cpp
tests/models/: Bernoulli.Q.cpp  Bernoulli.Zp.cpp  Bernoulli.cpp  Glauber.Q.cpp  Glauber.Zp.cpp  Glauber.cpp  InvadedCluster.Q.cpp  InvadedCluster.Zp.cpp  InvadedCluster.cpp  Invasion.Q.cpp  Invasion.Zp.cpp  Invasion.cpp  InvasionPercolation.cpp  SwendsenWang.Q.cpp  SwendsenWang.Zp.cpp  SwendsenWang.cpp
tests/statistics/: Chain.cpp
tests/topology/: persistence.Q.cpp  persistence.Zp.cpp  standardPersistence.Q.cpp  standardPersistence.parallel.Zp.cpp  standardPersistence.serial.Q.cpp  standardPersistence.serial.Zp.cpp  twistPersistence.Q.cpp  twistPersistence.Zp.cpp
(+68 files in other folders)
